apps/blocky/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blocky-svc
  namespace: apps
  labels:
    app: blocky
spec:
  selector:
    app: blocky
  ports:
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: web
      protocol: TCP
      port: 4000
      targetPort: 4000
